2009-10-06  Ivan Maidanski <ivmai@mail.ru>

	* include/gc_config_macros.h: Rearrange the platform detection
	code (GC_WIN32_PTHREADS implies GC_WIN32_THREADS; define
	GC_THREADS first if GC_XXX_THREADS already set; define proper
	GC_XXX_THREADS if GC_THREADS; define GC_PTHREADS in a single
	place; define _REENTRANT if posix threads except for Win32).
	* include/gc_config_macros.h: Reformat the code (make the
	indentation style uniform across the file).

2009-10-06  Ivan Maidanski <ivmai@mail.ru>

	* alloc.c (GC_try_to_collect_general): New function (move the code
	from GC_try_to_collect, pass force_unmap argument).
	* alloc.c (GC_try_to_collect, GC_gcollect): Call
	GC_try_to_collect_general().
	* alloc.c (GC_gcollect_and_unmap): New public function.
	* include/gc.h (GC_gcollect_and_unmap): New function declaration.
	* tests/test.c (window_proc): Call GC_gcollect_and_unmap() on
	WM_HIBERNATE event (instead of GC_set_force_unmap_on_gcollect()
	and GC_gcollect()).

2009-10-06  Ivan Maidanski <ivmai@mail.ru>

	* include/gc.h (GC_allow_register_threads, GC_register_my_thread,
	GC_unregister_my_thread, GC_malloc_many): Refine the comment.
	* include/gc.h (GC_malloc_many, GC_NEXT): Declare unconditionally
	(that is, don't depend on GC_THREADS macro).
	* include/gc.h: Don't check for __CYGWIN32__ and __CYGWIN__ along
	with a check for GC_PTHREADS (since the former implies the
	latter).

2009-10-06  Ivan Maidanski <ivmai@mail.ru>

	* include/gc.h: Reformat the code (make the indentation style
	uniform across the file).
	* include/gc.h (GC_SOLARIS_THREADS): Don't check for.
	* include/gc.h (GC_MIN, GC_MAX): Don't define.
	* mallocx.c (GC_malloc_many): Add comment to #endif.

2009-10-02  Ivan Maidanski <ivmai@mail.ru> (really Petter Urkedal)

	* configure.ac: Drop the subdir-objects Automake option, since
	it's incompatible with picking source files from libatomic_ops.
	* Makefile.in: Regenerate.

2009-10-01  Ivan Maidanski <ivmai@mail.ru> (really mostly Andreas Tobler)
